--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.0.1",
-    "@next/font": "^14.2.15",
-    "@stripe/stripe-js": "^1.29.0",
+    "@stripe/stripe-js": "^7.3.0",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
-    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.0",
-    "mongoose": "^8.14.0",
+    "micro": "^10.0.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
-    "react-stripe-js": "^1.1.5",
     "stripe": "^18.1.0",
     "swiper": "^11.2.6",
     "yet-another-react-lightbox": "^3.23.1",
